Transitioning from Kaggle to Git

--- a/Thesis Quiet Stars.ipynb
+++ b/Thesis Quiet Stars.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "88681530",
    "metadata": {},
    "outputs": [],
@@ -37,21 +37,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4662ac29",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load Datasets\n",
-    "advanced = pd.read_csv(\"Data/Advanced.csv\")\n",
-    "per_game = pd.read_csv('Data/Player Per Game.csv')\n",
-    "team_summaries = pd.read_csv('Data/Team Summaries.csv')\n",
-    "career_info = pd.read_csv('Data/Player Career Info.csv')"
+    "advanced = pd.read_csv(\"Data/Raw/Advanced.csv\")\n",
+    "per_game = pd.read_csv('Data/Raw/Player Per Game.csv')\n",
+    "team_summaries = pd.read_csv('Data/Raw/Team Summaries.csv')\n",
+    "career_info = pd.read_csv('Data/Raw/Player Career Info.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "67f2de20",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "4d9d56e7",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "9d81989d",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "01708554",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "16211b4f",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "e5828e9e",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "6483fc43",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "db462435",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
        "4           0.59    R           3  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
